samples/_failures_safe/1761070979_9fff2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00a7fe53.c: In function ‘main’:
./samples/SAFE/__tmp_00a7fe53.c:167:9: error: expected expression at end of input
  167 |         input[len - 1] =
      |         ^~~~~
./samples/SAFE/__tmp_00a7fe53.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00a7fe53.c:167:9: error: expected declaration or statement at end of input
